# Changelog

Notes significant changes to `i256`.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [Unreleased]

## Added

- Added the `const` comparison functions for the full `Ord` API.
- Added `to_str_radix`.

## Fixed

- Behavior for `overflowing_div` and similar division methods when dividing by zero to properly panic.
- Overflow checks for `shr` and `shl` implementations.
- Fixed the padding and formatting for `Octal`, `UpperHex`, `LowerHex` and `Binary`.

## Changed

- Made the internal implementation size-generic, mostly, so we can use higher order types for our precomputed division.

## [0.1.1] 2024-12-24

## Fixed

- Crate description and repisitory link on crates.io (#37, @pthariensflame).

## [0.1.0] 2024-12-24

## Added

- Complete API matching the core, primitive integral types.
- Optimizations for most mathematical operations.